# toxic-text-classification

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  deploy.yaml  docker-compose.yaml  pyproject.toml
.dvc/: config
data/: .gitignore  cleaned_data.dvc  cyberbully_data.dvc  ghc_data.dvc  stpl_cleaned_decide_variables.parquet  tokenizer_dataset.txt.dvc  toxic_comment_data.dvc
docker/: Dockerfile  Dockerfile.ray
docker/scripts/: startup-script.sh
notebooks/: .gitignore  01-data-loaders.ipynb  01-ghc-data-cleaning.ipynb  02-data-cleaners.ipynb  tokenizers.dvc
toxic_classifier/: __init__.py  processor.py  run_tasks.py
toxic_classifier/config/: config.yaml
toxic_classifier/datamodule/: datamodule.py  dataset.py
toxic_classifier/ml/: adapters.py  backbone.py  head.py  models.py  transformations.py
toxic_classifier/ml/tasks/: training_task.py
toxic_classifier/ml/training/: lightning_model.py  lightning_module.py  lightning_schedulers.py  loss_functions.py
toxic_classifier/utilities/: datacleaners.py  dataloaders.py  logger.py  mlflow_utils.py  spell_check.py  torch_utils.py  utils.py  utils_io.py
toxic_classifier/utilities/config/: config.yaml
